# cmake_cpp_boilerplate

./: .gitignore  CMakeLists.txt  README.md  build.sh
Source/: Main.cpp
Source/Len/Math/: Vector3D.cpp  Vector3D.h
Source/Tests/: gtest_main.cpp
